[package]
name = "hexhog"
version = "0.1.1"
description = "hex viewer/editor"
authors = ["dvdtsb"]
license = "MIT"
edition = "2024"
readme-file = "README.md"
repository = "https://github.com/DVDTSB/hexhog"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
toml = "0.9.7"
